- iniディレクティブ date.timezone が設定されてないために、E_WARNING が PHP 5.3.0 で出ていたバグを修正
- 存在しない(or 削除された) ethnaコマンドを指定すると Fatal Error が起きるバグを修正 (thanks:kondo_)
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=17894
- Ethna_Plugin_Logwriter の debug_backtrace の一部が取得できず、E_NOTICE が出るバグを修正 (thanks: http://www.remix.gr.jp/)
- cli 環境で Ethna_Session::start を叩いたときに $_SERVER 変数がないために E_NOTICE が出る問題を修正

** 2.5.0-preview4

*** bug fix

- フォーム定義が配列で、Ethna_ActionForm#getHiddenVars の値を Ethna_ActionForm#setAppNE した場合、クロスサイトスクリプティング脆弱性が存在するバグを修正 (thanks: shuitic)
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=17332


** 2.5.0-preview3

*** features

- アクションフォームに関する変更
-- フォーム定義を多次元配列に対応させました (thanks: id:syachi5150)
--- http://d.hatena.ne.jp/syachi5150/20081022/1224676038
-- フォーム定義を「'def' => array(),」 と定義しなくても、「'def',」 と定義するだけで親のフォームテンプレートの定義を補うようにした (thanks: sotarok)
-- フォーム定義を動的に変更するためのAPIを追加
--- Ethna_ActionForm#setFormDef_PreHelper
    Ethna_Backend や Ethna_Session が初期化後に呼ばれる
- フォームヘルパに関する変更
-- 1つのテンプレートに 複数 {form} が指定されたときに、submitされたformに対してのみ補正処理が働くように改善 この場合、{form name=...} 属性の指定が必須
-- 1つのテンプレートに 複数 {form} が置かれた場合に、それぞれのフォームの配列を区別するようにした
- Smarty プラグインに関する変更
-- Ethna 組み込みの Smarty プラグインを分割
--- Ethna 組み込みの Smarty プラグインとして class/Plugin/Smarty/ に Smarty のプラグイン形式で個別に作成
--- それに伴い Ethna_Smarty_Plugin クラスは削除
--- 読み込み順は次のように指定 1. Controller の plugin ディレクトリ 2. Ethna 組み込みの Plugin/Smarty/ ディレクトリ 3. samrty デフォルトのプラグイン
-- デフォルトの smarty プラグイン よりも Controller の plugins ディレクトリに定義されたプラグインを優先させるように変更
-- アプリケーション独自のSmarty Pluginの定義場所を app/plugin/Smarty にできるようデフォルトでディレクトリの作成、コントローラに値のセットするよう変更
- その他雑多な変更
-- Smarty を 2.6.22 に追随
-- アプリケーションの最終処理を行うメソッドとして、Ethna_Controller#end を追加
-- フィルタを一貫してプラグインから取得するように変更

*** bug fix

- safe-mode が ON の際に、Ethna_View_Test がエラーを吐く現象を回避 (thanks:longkey1 [ethna-users:1059])
- "ethna add-view" コマンドにて、locale 及び client encoding のデフォルト設定が誤っていたバグを修正
- Ethna_Renderer_Rhaco.php を 1.x 系の最新バージョン 1.6.1 に追随 (thanks: id:akiraneko [ethna-users:1081])